hello-world-LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    app: hello-world
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: hello-world
  type: LoadBalancer
