hello-world-NP-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-np-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: hello-world
